[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
pin-project = "1"
snafu = "0.6"
tokio = { version = "1", features = ["macros", "sync", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "sync", "rt", "time"] }
env_logger = "0.9"
tokio-util = "0.6"
